--- a/initial/frontend/package.json
+++ b/initial/frontend/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "app-frontend",
+  "name": "frontend",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -14,12 +14,10 @@
     "font-awesome": "^4.7.0",
     "highlightjs": "^9.16.2",
     "liquor-tree": "^0.2.70",
-    "vue": "^3.2.13",
+    "vue": "^2.6.14",
     "vue-gravatar": "^1.4.1",
     "vue-mq": "^1.0.1",
-    "vue-router": "^4.3.0",
-    "vue-toasted": "^1.1.28",
-    "vuex": "^4.1.0"
+    "vue-toasted": "^1.1.28"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
@@ -28,7 +26,8 @@
     "@vue/cli-plugin-eslint": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
     "eslint": "^7.32.0",
-    "eslint-plugin-vue": "^8.0.3"
+    "eslint-plugin-vue": "^8.0.3",
+    "vue-template-compiler": "^2.6.14"
   },
   "eslintConfig": {
     "root": true,
@@ -36,7 +35,7 @@
       "node": true
     },
     "extends": [
-      "plugin:vue/vue3-essential",
+      "plugin:vue/essential",
       "eslint:recommended"
     ],
     "parserOptions": {
@@ -47,7 +46,6 @@
   "browserslist": [
     "> 1%",
     "last 2 versions",
-    "not dead",
-    "not ie 11"
+    "not dead"
   ]
 }
