--- a/initial/frontend/package.json
+++ b/initial/frontend/package.json
@@ -17,7 +17,10 @@
     "vue": "^2.6.14",
     "vue-gravatar": "^1.4.1",
     "vue-mq": "^1.0.1",
-    "vue-toasted": "^1.1.28"
+    "vue-toasted": "^1.1.28",
+    "vue2-editor":"^2.6.6",
+    "vuex":"^3.0.1",
+    "vue-router":"^3.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
