--- a/initial/frontend/package.json
+++ b/initial/frontend/package.json
@@ -8,8 +8,8 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "axios": "^1.6.7",
-    "bootstrap-vue": "^2.23.1",
+    "axios": "0.18.0",
+    "bootstrap-vue": "2.0.0-rc.11",
     "core-js": "^3.8.3",
     "font-awesome": "^4.7.0",
     "highlightjs": "^9.16.2",
